changing logo, adjusting text

--- a/_config/_includes/content/nav.html
+++ b/_config/_includes/content/nav.html
@@ -6,7 +6,7 @@
 					<div class="navigation-links">
 						<div class="navigation-link">
 							<a class="navigation-anchor navigation-brand" href="{{site.url}}/" title="{{site.description}}">
-								<img src= "https://i.ibb.co/wwZR1pH/dbt-learn-logo.png ">
+								<img src= "https://i.imgur.com/xNIeUkv.png">
 								<strong class="navigation-brand-text">{{site.title}} - {{site.description}}</strong>
 							</a>
 						</div>
