--- a/_config/_includes/content/nav.html
+++ b/_config/_includes/content/nav.html
@@ -10,13 +10,13 @@
 								<strong class="navigation-brand-text">{{site.title}} - {{site.description}}</strong>
 							</a>
 						</div>
-						<div class="navigation-link" data-large>
+						<div class="navigation-link">
 							<a class="navigation-anchor" href="#about">About</a>
 						</div>
-						<div class="navigation-link" data-large>
+						<div class="navigation-link">
 							<a class="navigation-anchor" href="#agenda">Agenda</a>
 						</div>
-						<div class="navigation-link" data-large>
+						<div class="navigation-link">
 							<a class="navigation-anchor" href="#register">Register</a>
 						</div>
 					</div>
