--- a/_config/_layouts/page.html
+++ b/_config/_layouts/page.html
@@ -19,5 +19,10 @@
 	  {% endif %}
 	  {% include content/footer.html %}
 	</div>
+    {% if page.render_chart %}
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.bundle.min.js"></script>
+        <script src="/ui/js/helpers/chart.js"></script>
+    {% endif %}
   </body>
 </html>
