add interest form, add program details

--- a/_config/_includes/content/nav.html
+++ b/_config/_includes/content/nav.html
@@ -17,7 +17,10 @@
 							<a class="navigation-anchor" href="#agenda">Agenda</a>
 						</div>
 						<div class="navigation-link">
-							<a class="navigation-anchor" href="#register">Register</a>
+							<a class="navigation-anchor" href="#details">Details</a>
+						</div>
+						<div class="navigation-link">
+							<a class="navigation-anchor" href="#interest">Interest Form</a>
 						</div>
 					</div>
 				</div>
