First attempt at FAQ

--- a/_config/_includes/content/nav.html
+++ b/_config/_includes/content/nav.html
@@ -19,6 +19,9 @@
 						<div class="navigation-link">
 							<a class="navigation-anchor" href="#interest">Interest Form</a>
 						</div>
+						<div class="navigation-link">
+							<a class="navigation-anchor" href="#faq">FAQ</a>
+						</div>
 					</div>
 				</div>
 			</div>
