--- a/_config/_layouts/presentation.html
+++ b/_config/_layouts/presentation.html
@@ -48,7 +48,7 @@ Below, we begin content from the presentation file. -->
 {{ content }}
 
 <!-- This adds a link to the first slide of the next presentation -->
-.right[[cont...]({{site.baseurl}}lessons/{{page.lesson|plus:1}})]
+.right[[cont...](/lessons/{{page.lesson|plus:1}})]
     </textarea>
     <script src="https://gnab.github.io/remark/downloads/remark-latest.min.js" type="text/javascript">
     </script>
