--- a/_config/_layouts/presentation.html
+++ b/_config/_layouts/presentation.html
@@ -33,6 +33,7 @@
     </style>
   </head>
   <body>
+  <script src="//gnab.github.io/remark/downloads/remark-latest.min.js" type="text/javascript"></script>
     <textarea id="source">
 name: title
 class: center, middle
@@ -50,7 +51,6 @@ Below, we begin content from the presentation file. -->
 <!-- This adds a link to the first slide of the next presentation -->
 .right[[cont...](/lessons/{{page.lesson|plus:1}})]
     </textarea>
-    <script src="https://gnab.github.io/remark/downloads/remark-latest.min.js" type="text/javascript">
     </script>
     <script type="text/javascript">
       var slideshow = remark.create({
