--- a/_config/_layouts/presentation.html
+++ b/_config/_layouts/presentation.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <title>{{ page.title | strip_html }}</title>
     <style>
       @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
@@ -51,7 +52,6 @@ Below, we begin content from the presentation file. -->
 <!-- This adds a link to the first slide of the next presentation -->
 .right[[cont...](/lessons/{{page.lesson|plus:1}})]
     </textarea>
-    </script>
     <script type="text/javascript">
       var slideshow = remark.create({
           navigation: {scroll: false,},
