Add initial slides for 202, 204

--- a/_config/_layouts/presentation.html
+++ b/_config/_layouts/presentation.html
@@ -30,6 +30,19 @@
       .right-column ~ ul { clear: both; }
 
       .scale { width: 50% }
+      
+      table {
+          border-collapse: collapse;
+      }
+      th {
+          padding: 10px;
+          background-color: lightblue;
+          border: 1px solid black;
+      }
+      td {
+          padding: 5px;
+          border: 1px solid grey;
+      }
 
     </style>
   </head>
