Jinja + databases in p good shape

--- a/_config/_layouts/presentation.html
+++ b/_config/_layouts/presentation.html
@@ -31,6 +31,13 @@
 
       .scale { width: 50% }
       
+      .img-center {
+          width: 75%;
+          display: block;
+          margin-left: auto;
+          margin-right: auto;
+      }
+      
       table {
           border-collapse: collapse;
       }
