First cuts of 105, 107-109

--- a/_config/_layouts/presentation.html
+++ b/_config/_layouts/presentation.html
@@ -31,6 +31,8 @@
 
       .scale { width: 50% }
       
+      .dense-text { font-size: 90%; }
+      
       .img-center {
           width: 75%;
           display: block;
