Rm broken navbar from lessons index

--- a/_config/_includes/content/nav.html
+++ b/_config/_includes/content/nav.html
@@ -10,6 +10,7 @@
 								<strong class="navigation-brand-text">{{site.title}} - {{site.description}}</strong>
 							</a>
 						</div>
+						{% if page.title != 'Lessons' %}
 						<div class="navigation-link">
 							<a class="navigation-anchor" href="#about">About</a>
 						</div>
@@ -22,6 +23,7 @@
 						<div class="navigation-link">
 							<a class="navigation-anchor" href="#faq">FAQ</a>
 						</div>
+						{% endif %}
 					</div>
 				</div>
 			</div>
