--- a/_config/_layouts/presentation.html
+++ b/_config/_layouts/presentation.html
@@ -6,15 +6,25 @@
     <title>{{ page.title | strip_html }}</title>
     <style>
       
-    @import url(https://fonts.googleapis.com/css?family=Caveat);	
+    @import url(https://fonts.googleapis.com/css?family=Gudea);	
     @import url(https://fonts.googleapis.com/css?family=Lato:400,700,400italic);	
     @import url(https://fonts.googleapis.com/css?family=Inconsolata:400,700,400italic);	
 
     body { font-family: 'Lato'; }	
-    h1, h2, h3 {	
-    font-family: 'Caveat';	
-    font-weight: normal;	
-    }	
+    h1, h2, h3 {
+        font-family: 'Gudea';	
+        font-weight: normal;
+        color: rgb(255, 132, 94);
+    }
+    
+    .white {
+        color: white;
+    }
+    
+    .remark-container {
+      background-color: rgb(255, 106, 76);
+    }
+    
     .remark-code, .remark-inline-code { font-family: 'Inconsolata'; }
       
       /* Two-column layouts */
@@ -41,6 +51,32 @@
           margin-right: auto;
       }
       
+      .title {
+        background: url('/ui/img/graph/poster.png'), #123744;
+        background-position: 0% 100%;
+        background-size: 30%;
+        background-repeat: no-repeat;
+        color: white;
+      }
+      .title h1, .title h2 {
+        color: rgb(255, 132, 94);
+        font-weight: bold;
+        font-size: 400%;
+      }
+      
+      .subtitle {
+        background: #123744;
+        color: white;
+      }
+      .subtitle h1, .subtitle h2 {
+        color: white;
+      }
+      
+      .subtitle a:link { color: white; }
+      .subtitle a:visited { color: white; }
+      .subtitle a:hover { color: white; }
+      .subtitle a:active { color: white; }
+      
       table {
           border-collapse: collapse;
           width: 100%;
@@ -60,29 +96,19 @@
   <body>
   <script src="//gnab.github.io/remark/downloads/remark-latest.min.js" type="text/javascript"></script>
     <textarea id="source">
-name: title
-class: center, middle
-background-color: orange
-layout: true
-
-<!-- This creates a template for "title" slides in the presentation,
-and (by default) extends that style to the first slide.
-Below, we begin content from the presentation file. -->
-
----
 
 {{ content }}
 
 <!-- This adds a link to the first slide of the next presentation -->
 {% assign num = page.lesson | slice: 2 | plus: 0 %}
 {% if num < 9 %}
-.right[[cont...](/lessons/{{page.lesson|plus:1}})]
+<a href="/lessons/{{page.lesson|plus:1}}"><img style="width: 5%; position: absolute; bottom: 10%; right: 5%;" src="/ui/img/graph/avatar.png"></img></a></span>
 {% endif %}
     </textarea>
     <script type="text/javascript">
       var slideshow = remark.create({
           navigation: {scroll: false,},
-          ratio: '4:3', // can also set to 16:9, or anything else
+          ratio: '16:9', // can also set to 16:9, or anything else
           countIncrementalSlides: false,
       });
     </script>
