--- a/_config/_layouts/presentation.html
+++ b/_config/_layouts/presentation.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="robots" content="noindex">
     <meta charset="utf-8">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <title>{{ page.title | strip_html }}</title>
@@ -10,15 +11,6 @@
   <body>
     <textarea id="source">
 {{ content }}
-        <!-- This adds a link to the first slide of the next presentation -->
-        {% assign num = page.lesson | slice: 2 | plus: 0 %}
-        {% if num < 9 %}
-            <a href="/lessons/{{page.lesson|plus:1}}">
-                <img
-                    style="width: 5%; position: absolute; bottom: 10%; right: 5%;"
-                    src="/ui/img/graph/avatar.png"></img>
-            </a>
-        {% endif %}
     </textarea>
 
     <script src="//gnab.github.io/remark/downloads/remark-latest.min.js" type="text/javascript"></script>
