--- a/_config/_includes/options/styles-learn.html
+++ b/_config/_includes/options/styles-learn.html
@@ -3,7 +3,7 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:400,700,400italic);	
 @import url(https://fonts.googleapis.com/css?family=Inconsolata:400,700,400italic);	
 
-body { font-family: 'Lato';  }	
+body { font-family: 'Lato';  }
 h1, h2, h3 {
     font-family: 'dbt-brand';	
     font-weight: normal;
@@ -49,6 +49,10 @@ h1, h2, h3 {
   .remark-slide-content {
     font-size: 32px;
    }
+   
+  .remark-code {
+    font-size: 28px;
+  }
 
   .img-center {
       width: 75%;
