--- a/_config/_layouts/presentation.html
+++ b/_config/_layouts/presentation.html
@@ -13,7 +13,7 @@
 {{ content }}
     </textarea>
 
-    <script src="//gnab.github.io/remark/downloads/remark-latest.min.js" type="text/javascript"></script>
+    <script src="/out/remark-latest.min.js" type="text/javascript"></script>
     <script type="text/javascript">
       var slideshow = remark.create({
           navigation: {scroll: false,},
