--- a/_config/_includes/options/styles-learn.html
+++ b/_config/_includes/options/styles-learn.html
@@ -1,11 +1,11 @@
 <style>
 
-@import url(https://fonts.googleapis.com/css?family=Lato:400,700,400italic);	
-@import url(https://fonts.googleapis.com/css?family=Inconsolata:400,700,400italic);	
+@import url(https://fonts.googleapis.com/css?family=Lato:400,700,400italic);
+@import url(https://fonts.googleapis.com/css?family=Inconsolata:400,700,400italic);
 
 body { font-family: 'Lato';  }
 h1, h2, h3 {
-    font-family: 'dbt-brand';	
+    font-family: 'dbt-brand';
     font-weight: normal;
     color: rgb(255, 132, 94);
 }
@@ -23,7 +23,7 @@ h1, h2, h3 {
 }
 
 .remark-code, .remark-inline-code { font-family: 'Inconsolata'; }
-  
+
   /* Two-column layouts */
   .left-column  { width: 49%; float: left; }
   .right-column { width: 49%; float: right; }
@@ -38,7 +38,7 @@ h1, h2, h3 {
   .right-column ~ ul { clear: both; }
 
   .scale { width: 50% }
-  
+
   .dense-text { font-size: 90%; }
 
   .remark-slide-scaler {
@@ -47,11 +47,11 @@ h1, h2, h3 {
   }
 
   .remark-slide-content {
-    font-size: 32px;
-   }
-   
-  .remark-code {
     font-size: 28px;
+   }
+
+  .remark-code {
+    font-size: 24px;
   }
 
   .img-center {
@@ -60,7 +60,7 @@ h1, h2, h3 {
       margin-left: auto;
       margin-right: auto;
   }
-  
+
   .title {
     background: url('/ui/img/graph/poster.png'), #123744;
     background-position: 5% 95%;
@@ -72,7 +72,7 @@ h1, h2, h3 {
     color: white;
     font-weight: bold;
   }
-  
+
   .subtitle {
     background: #123744;
     color: white;
@@ -80,15 +80,21 @@ h1, h2, h3 {
   .subtitle h1, .subtitle h2 {
     color: white;
   }
-  
+
   .subtitle a:link { color: white; }
   .subtitle a:visited { color: white; }
   .subtitle a:hover { color: white; }
   .subtitle a:active { color: white; }
-  
+
+  .caption {
+    font-size: 60%;
+    font-style: italic
+  }
+
   table {
       border-collapse: collapse;
       width: 100%;
+      font-size: 60%;
   }
   th {
       padding: 10px;
@@ -106,63 +112,63 @@ h1, h2, h3 {
       font-style: normal;
       src: url("/fonts/burlingame/dbt_cloud-04112018/Fonts/c2ee5530-f585-4174-a3ab-2c494d1a9334.woff") format("woff");
   }
-  
+
   @font-face {
       font-family:"dbt-brand";
       font-weight: 300;
       font-style: oblique;
       src: url("/fonts/burlingame/dbt_cloud-04112018/Fonts/dbc491c3-9757-40e1-aa60-4796eacee703.woff") format("woff");
   }
-  
+
   @font-face {
       font-family:"dbt-brand";
       font-weight: normal;
       font-style: normal;
       src: url("/www.getdbt.com/ui/fonts/burlingame/dbt_cloud-04112018/Fonts/3f3a4727-b128-49d3-aba6-6a6df09ecddc.woff") format("woff");
   }
-  
+
   @font-face {
       font-family:"dbt-brand";
       font-weight: normal;
       font-style: oblique;
       src: url("/www.getdbt.com/ui/fonts/burlingame/dbt_cloud-04112018/Fonts/2023ec3d-950e-4705-a934-f2d53902faff.woff") format("woff");
   }
-  
+
   @font-face {
       font-family:"dbt-brand";
       font-weight: 500;
       font-style: normal;
       src: url("/www.getdbt.com/ui/fonts/burlingame/dbt_cloud-04112018/Fonts/87c2a7f4-6e05-446f-b0e5-b8506fe95065.woff") format("woff");
   }
-  
+
   @font-face {
       font-family:"dbt-brand";
       font-weight: 500;
       font-style: oblique;
       src: url("/www.getdbt.com/ui/fonts/burlingame/dbt_cloud-04112018/Fonts/aa270bc7-f7ce-4020-84eb-51ca1cf66ad9.woff") format("woff");
   }
-  
+
   @font-face {
       font-family:"dbt-brand";
       font-weight: bold;
       font-style: normal;
       src: url("/www.getdbt.com/ui/fonts/burlingame/dbt_cloud-04112018/Fonts/067a3ea5-ed1e-4cdc-bb83-883c1829ffa0.woff") format("woff");
   }
-  
+
   @font-face {
       font-family:"dbt-brand";
       font-weight: bold;
       font-style: oblique;
       src: url("/www.getdbt.com/ui/fonts/burlingame/dbt_cloud-04112018/Fonts/7c49b40e-8327-4fc1-9228-512ff81b273a.woff") format("woff");
   }
-  
+
   @font-face {
       font-family:"dbt-brand";
       font-weight: 800;
       font-style: normal;
       src: url("/www.getdbt.com/ui/fonts/burlingame/dbt_cloud-04112018/Fonts/5ca2310c-a0d0-4eea-92d9-11a54021e6f6.woff") format("woff");
   }
-  
+
   @font-face {
       font-family:"dbt-brand";
       font-weight: 800;
