--- a/_config/_includes/options/styles-learn.html
+++ b/_config/_includes/options/styles-learn.html
@@ -40,6 +40,9 @@ h1, h2, h3 {
   .scale { width: 50% }
   
   .dense-text { font-size: 90%; }
+  .dense-text .remark-code { font-size: 90%; }
+  .grey { color: grey; }
+  .highlight { background: yellow; }
 
   .remark-slide-scaler {
     box-shadow: none !important;
@@ -47,11 +50,11 @@ h1, h2, h3 {
   }
 
   .remark-slide-content {
-    font-size: 32px;
+    font-size: 28px;
    }
    
   .remark-code {
-    font-size: 28px;
+    font-size: 24px;
   }
 
   .img-center {
