Add snowplow to lessonn presentations

--- a/_config/_layouts/presentation.html
+++ b/_config/_layouts/presentation.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <title>{{ page.title | strip_html }}</title>
-
+    {% include options/gtm_head.html %}
     {% include options/styles-learn.html %}
   </head>
   <body>
