Fix bit.ly link + color

--- a/_config/_includes/options/styles-learn.html
+++ b/_config/_includes/options/styles-learn.html
@@ -84,10 +84,10 @@ h1, h2, h3 {
     color: white;
   }
 
-  .subtitle a:link { color: white; }
-  .subtitle a:visited { color: white; }
-  .subtitle a:hover { color: white; }
-  .subtitle a:active { color: white; }
+  .title a:link, .subtitle a:link { color: white; }
+  .title a:visited, .subtitle a:visited { color: white; }
+  .title a:hover, .subtitle a:hover { color: white; }
+  .title a:active, .subtitle a:active { color: white; }
 
   .caption {
     font-size: 60%;
