--- a/_config/_includes/options/styles-learn.html
+++ b/_config/_includes/options/styles-learn.html
@@ -41,6 +41,8 @@ h1, h2, h3 {
 
   .dense-text { font-size: 90%; }
   .dense-text .remark-code { font-size: 90%; }
+  .denser-text { font-size: 75%; }
+  .denser-text .remark-code { font-size: 75%; }
   .grey { color: grey; }
   .highlight { background: yellow; }
 
