--- a/_config/_includes/options/styles-learn.html
+++ b/_config/_includes/options/styles-learn.html
@@ -53,7 +53,13 @@ h1, h2, h3 {
 
   .remark-slide-content {
     font-size: 28px;
-   }
+  }
+  
+  .remark-slide-number:before {
+     white-space: pre;
+     content: '© Fishtown Analytics. Not for commercial use.      ';
+     font-size: 10px;
+  }
 
   .remark-code {
     font-size: 24px;
