--- a/_config/_includes/content/logo.html
+++ b/_config/_includes/content/logo.html
@@ -2,7 +2,7 @@
 
 <{% if include.link %}a href="{{include.link}}"{% else %}div{% endif %} class="logo-image" style="-webkit-flex:{{grow}} 1 0;-ms-flex:{{grow}} 1 0px;flex:{{grow}} 1 0px;">
 	<img
-		src="{{site.baseurl}}/assets/img/customers/{{include.img}}"
+		src="{{site.baseurl}}assets/img/customers/{{include.img}}"
 		width="{{include.width}}"
 		height="{{include.height}}"
 		alt="{{include.alt}}"
