--- a/_config/_includes/options/scripts.html
+++ b/_config/_includes/options/scripts.html
@@ -2,7 +2,7 @@
 		<script>WebFontConfig={google:{families:['Source+Code+Pro:400,700']}},function(){var a=document.createElement("script");a.src="//ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js",a.type="text/javascript",a.async="true";var b=document.getElementsByTagName("script")[0];b.parentNode.insertBefore(a,b)}();</script>
 		
 		{% comment %} JQUERY + VELLUM {% endcomment %}
-		<script>velllum={directory:'{{site.baseurl}}/www.getdbt.com'}; function async(u,c){var d=document,t='script',o=d.createElement(t),s=d.getElementsByTagName(t)[0];o.src=u;if(c){o.addEventListener('load',function(e){c(null,e);},false);}s.parentNode.insertBefore(o,s);}; async('//code.jquery.com/jquery-3.0.0.min.js',function(){ $(document).ready(function(){ async(window.velllum.directory+'/ui/js/velllum.js'); }); });</script>
+		<script>velllum={directory:'{{site.baseurl}}www.getdbt.com'}; function async(u,c){var d=document,t='script',o=d.createElement(t),s=d.getElementsByTagName(t)[0];o.src=u;if(c){o.addEventListener('load',function(e){c(null,e);},false);}s.parentNode.insertBefore(o,s);}; async('//code.jquery.com/jquery-3.0.0.min.js',function(){ $(document).ready(function(){ async(window.velllum.directory+'/ui/js/velllum.js'); }); });</script>
 
 		{% comment %} GITHUB + BUTTONS {% endcomment %}
 		<script async defer src="https://buttons.github.io/buttons.js"></script>
