--- a/_config/_includes/options/next_presentation.html
+++ b/_config/_includes/options/next_presentation.html
@@ -2,7 +2,7 @@
 {% assign this_lesson_slug = page.id | remove: "/lessons/" %}
 {% assign next_slug = '' %}
 
-{% for day in site.data.finternal %}
+{% for day in site.data.curriculum %}
     {% assign is_last_day = forloop.last %}
     {% assign lessons = '' | split: ',' %}
     {% for session in day.sessions %}
