Added big idea slide, CFU questions, bridge slide

--- a/_config/_includes/options/styles-learn.html
+++ b/_config/_includes/options/styles-learn.html
@@ -18,6 +18,10 @@ h1, h2, h3 {
     color: white;
 }
 
+.orange {
+    color: rgb(255, 132, 94);
+}
+
 .remark-container {
   background-color: #123744;
 }
