Added lessons to the nav bar

--- a/_config/_includes/content/nav.html
+++ b/_config/_includes/content/nav.html
@@ -23,6 +23,9 @@
 						<div class="navigation-link">
 							<a class="navigation-anchor" href="#faq">FAQ</a>
 						</div>
+						<div class="navigation-link"> 
+							<a class="navigation-anchor" href="./lessons">Lessons</a>
+						</div>
 						{% endif %}
 					</div>
 				</div>
