--- a/_config/_includes/options/styles-learn.html
+++ b/_config/_includes/options/styles-learn.html
@@ -54,7 +54,7 @@ h1, h2, h3 {
   .remark-slide-content {
     font-size: 28px;
   }
-  
+
   .remark-slide-number:before {
      white-space: pre;
      content: '© Fishtown Analytics. Not for commercial use.      ';
@@ -73,7 +73,7 @@ h1, h2, h3 {
   }
 
   .title {
-    background: url('/ui/img/graph/poster.png'), #123744;
+    background: url('/ui/img/dbt-learn-light.png'), #123744;
     background-position: 5% 95%;
     background-size: 30%;
     background-repeat: no-repeat;
