SNot orange, just //

--- a/_config/_includes/content/nav.html
+++ b/_config/_includes/content/nav.html
@@ -27,8 +27,9 @@
 						<div class="navigation-link">
 							<a class="navigation-anchor" href="{{baseurl}}#faq">FAQ</a>
 						</div>
+						<div class="navigation-link"> &nbsp; // &nbsp; </div>
 						<div class="navigation-link"> 
-							<a class="navigation-anchor text-brand" href="{{baseurl}}/lessons">Lessons</a>
+							<a class="navigation-anchor" href="{{baseurl}}/lessons">Lessons</a>
 						</div>
 					</div>
 				</div>
