Day 1 Learning Objectives and focus slide

--- a/_config/_includes/options/focus_slide.html
+++ b/_config/_includes/options/focus_slide.html
@@ -1,6 +1,6 @@
 <!-- Template for displaying the focus slides for each presentation -->
 
-<h1>{{ page.title }} >> Focus</h1>
+<h1>{{ page.title }} | Focus</h1>
 {% for objective in page.learningObjectives %}
    <li> {{ objective }} </li>
 {% endfor %}
