--- a/_config/_includes/options/styles.html
+++ b/_config/_includes/options/styles.html
@@ -1,2 +1,2 @@
 
-		<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/www.getdbt.com/ui/css/velllum.css" media="all" />
+		<link rel="stylesheet" type="text/css" href="../www.getdbt.com/ui/css/velllum.css" media="all" />
