--- a/_config/_includes/content/footer.html
+++ b/_config/_includes/content/footer.html
@@ -5,7 +5,7 @@
 			</div>
 			<div class="col-lg-6 text-right text-center-small">
 				<ul class="list-inline">
-					<li><a href="http://fishtownanalytics.com" target="_blank"><strong>dbt learn</strong> is hosted with love by<strong class="nowrap"><i data-icon="fishtown" class="icon-buffer"></i> Fishtown Analytics</strong></a></li>
+					<li><a href="http://fishtownanalytics.com" target="_blank"><strong>dbt Learn</strong> is hosted with love by<strong class="nowrap"><i data-icon="fishtown" class="icon-buffer"></i> Fishtown Analytics</strong></a></li>
 				</ul>
 			</div>
 		</div>
