--- a/_config/_layouts/lesson.html
+++ b/_config/_layouts/lesson.html
@@ -13,6 +13,7 @@
   <body class="{{page.class}}">
     {% include options/gtm_body.html %}
     {% include svg/svg.html %}
+
     <div class="page">
       {% include content/nav.html %}
       <div class="bg-navy-darker">
@@ -21,7 +22,7 @@
             <div class="row">
               <div class="col-lg-8">
                 <div class="text-contain">
-                  <h1 class="h0">{{ page.title }}</h1>
+                  <h1 class="h0">{{ page.module }}</h1>
                 </div>
               </div>
             </div>
@@ -29,6 +30,8 @@
         </div>
         <div class="mask mask-ne text-white"></div>
       </div>
+
+
       <div class="bg-white">
         <div class="mask mask-ne text-white"></div>
         <div class="mask mask-sw text-white"></div>
@@ -44,12 +47,9 @@
           </div>
         </div>
       </div>
+
     </div>
-    {% if page.render_chart %}
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.bundle.min.js"></script>
-    <script src="/ui/js/helpers/chart.js"></script>
-    {% endif %}
+
     {% include content/footer.html %}
   </body>
 
