--- a/_config/_layouts/backend.html
+++ b/_config/_layouts/backend.html
@@ -26,6 +26,11 @@
       tr {
         background-color: #ffffff;
       }
+      
+      .text-contain {
+        max-width: 1200px;
+      }
+      
     </style>
 
   </head>
@@ -35,6 +40,8 @@
     {% include svg/svg.html %}
     <div class="page">
       {% include content/nav.html %}
+      
+      
       <div class="bg-navy-darker">
         <div class="section-md text-white text-navy-lightest">
           <div class="container">
@@ -49,17 +56,22 @@
         </div>
         <div class="mask mask-ne text-white"></div>
       </div>
+            
       <div class="bg-white">
+        
         <div class="mask mask-ne text-white"></div>
+        
         <div class="mask mask-sw text-white"></div>
+        
         <div class="section">
-          <div class="text-contain">
+          
+          <div class="text-contain" style="max-width=95%;">
+            {{ content }}
             <div class="row">
               <div class="col-lg-12 col-bottomless">
               </div>
             </div>
             <div class="row">
-              {{ content }}
             </div>
           </div>
         </div>
