--- a/_config/_layouts/lesson.html
+++ b/_config/_layouts/lesson.html
@@ -43,6 +43,11 @@
             </div>
             <div class="row">
               {{ content }}
+
+              <hr />
+              {% include options/ondemand/prev_next_nav.html %}
+
+
             </div>
           </div>
         </div>
@@ -51,6 +56,7 @@
     </div>
 
     {% include content/footer.html %}
+
   </body>
 
 </html>
