--- a/_config/_layouts/lesson.html
+++ b/_config/_layouts/lesson.html
@@ -8,6 +8,20 @@
     {% include options/meta.html %}
     {% include options/scripts.html %}
     {% include options/styles.html %}
+    
+  <style>
+    .grid-container {
+      display: grid;
+      grid-template-columns: 3fr 7fr;
+    }
+    
+    .grid-item {
+      padding: 0px 2.5%;
+      margin: 0 2.5%;
+    }
+
+  </style>
+    
   </head>
 
   <body class="{{page.class}}">
@@ -31,24 +45,22 @@
         <div class="mask mask-ne text-white"></div>
       </div>
 
-
       <div class="bg-white">
         <div class="mask mask-ne text-white"></div>
         <div class="mask mask-sw text-white"></div>
         <div class="section">
-          <div class="text-contain">
-            <div class="row">
-              <div class="col-lg-12 col-bottomless">
-              </div>
+          <div class="grid-container">
+            
+            <div class="grid-item">
+              {% include options/ondemand/toc.html %}
             </div>
-            <div class="row">
+            
+            <div class="grid-item">
               {{ content }}
-
-              <hr />
+              <hr style="margin:20px 5%">
               {% include options/ondemand/prev_next_nav.html %}
-
-
             </div>
+          
           </div>
         </div>
       </div>
