--- a/_config/_includes/options/ondemand/toc.html
+++ b/_config/_includes/options/ondemand/toc.html
@@ -2,7 +2,7 @@
 {% assign module = site.data.ondemand.modules | where: "slug", mod_slug %}
 {% assign leadURL = "/ondemand/" | append: site.onDemandHash %}
 {% assign current_slug = page.url | remove: leadURL %}
-{% assign current_slug = current_slug | remove: mod_slug %}
+{% assign current_slug = current_slug | remove_first: mod_slug %}
 {% assign current_slug = current_slug | remove: "//" %}
 
 <div style="padding: 0px 5%; border-right: 2px solid #e9ecef; margin: 0 5%">
