Turned off search indexing, fixed yml and README errors

--- a/_config/_layouts/reveal.html
+++ b/_config/_layouts/reveal.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html lang="en">
+<meta name="robots" content="noindex">
 
   <head>
     <meta charset="utf-8">
-    <title>Testing Fundamentals</title>
+    <title>{{ page.title }}</title>
     <link rel="stylesheet" href="{{ site.baseurl }}reveal.js/dist/reveal.css">
     <link rel="stylesheet" href="{{ site.baseurl }}stylesheets/styles-ondemand.css">
     <link rel="stylesheet" href="{{ site.baseurl }}reveal.js/plugin/highlight/monokai.css">
