--- a/_config/_includes/options/styles.html
+++ b/_config/_includes/options/styles.html
@@ -1,2 +1,1 @@
-
-		<link rel="stylesheet" type="text/css" href="../www.getdbt.com/ui/css/velllum.css" media="all" />
+<link rel="stylesheet" type="text/css" href="{% link www.getdbt.com/ui/css/velllum.scss %}" media="all" />
