--- a/_config/_layouts/lesson.html
+++ b/_config/_layouts/lesson.html
@@ -8,11 +8,26 @@
     {% include options/meta.html %}
     {% include options/scripts.html %}
     {% include options/styles.html %}
+    
+  <style>
+    .grid-container {
+      display: grid;
+      grid-template-columns: 3fr 7fr;
+    }
+    
+    .grid-item {
+      padding: 0px 2.5%;
+      margin: 0 2.5%;
+    }
+
+  </style>
+    
   </head>
 
   <body class="{{page.class}}">
     {% include options/gtm_body.html %}
     {% include svg/svg.html %}
+
     <div class="page">
       {% include content/nav.html %}
       <div class="bg-navy-darker">
@@ -21,7 +36,7 @@
             <div class="row">
               <div class="col-lg-8">
                 <div class="text-contain">
-                  <h1 class="h0">{{ page.title }}</h1>
+                  <h1 class="h0">{{ page.module }}</h1>
                 </div>
               </div>
             </div>
@@ -29,28 +44,31 @@
         </div>
         <div class="mask mask-ne text-white"></div>
       </div>
+
       <div class="bg-white">
         <div class="mask mask-ne text-white"></div>
         <div class="mask mask-sw text-white"></div>
         <div class="section">
-          <div class="text-contain">
-            <div class="row">
-              <div class="col-lg-12 col-bottomless">
-              </div>
+          <div class="grid-container">
+            
+            <div class="grid-item">
+              {% include options/ondemand/toc.html %}
             </div>
-            <div class="row">
+            
+            <div class="grid-item">
               {{ content }}
+              <hr style="margin:20px 5%">
+              {% include options/ondemand/prev_next_nav.html %}
             </div>
+          
           </div>
         </div>
       </div>
+
     </div>
-    {% if page.render_chart %}
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.bundle.min.js"></script>
-    <script src="/ui/js/helpers/chart.js"></script>
-    {% endif %}
+
     {% include content/footer.html %}
+
   </body>
 
 </html>
