--- a/_config/_includes/options/preview.html
+++ b/_config/_includes/options/preview.html
@@ -1,37 +1,31 @@
-<!-- This lists all the presentations in the current day -->	
+<!-- This lists all the presentations in the next day -->	
 {% assign this_lesson_slug = page.id | remove: "/lessons/" %}
-{% assign next_index = 0 %}
-{% assign next_slug = '' %}
+{% assign tmrw_index = 0 %}
 
 {% for day in site.data.curriculum %}
-    {% assign is_today = false %}
+    {% assign day_index = forloop.index %}
     {% assign lessons = '' | split: ',' %}
     {% for session in day.sessions %}
         {% assign lessons = lessons | concat: session.lessons %}
         {% for lesson in lessons %}
             
             {% if this_lesson_slug == lesson.slug %}
-                {% assign is_today = true %}
-                {% assign next_index = forloop.index %}
-                {% assign next_slug = lessons[next_index].slug %}
+                {% assign tmrw_index = day_index | plus: 1 %}
             {% endif %}
                 
         {% endfor %}
     {% endfor %}
     
-    {% if is_today %}
+    {% if forloop.index == tmrw_index %}
         {% for lsn in lessons %}
             {% assign lesson_id = "/lessons/" | append: lsn.slug %}
             {% assign match = site.lessons | where: 'id', lesson_id %}
             {% assign lesson = match[0] %}
 
-{% if forloop.index <= next_index %}
-<li> {{lesson.title}}</li>
-{% elsif lsn.slug == next_slug %}
---
-<li class="orange"> {{lesson.title}}</li>
+{% if forloop.index == 1 %}
+<li class="orange">{{lesson.title}}</li>
 {% else %}
-<li class="grey">{{lesson.title}}</li>
+<li class="grey"> {{lesson.title}}</li>
 {% endif %}
 
         {% endfor %}
