--- a/_config/_includes/options/styles-learn.html
+++ b/_config/_includes/options/styles-learn.html
@@ -144,6 +144,16 @@ h1, h2, h3 {
       border: 1px solid grey;
   }
 
+  .thumbnail-white {
+    color: white;
+    font-size: 1.5em;
+  }
+
+  .thumbnail-orange {
+    color: rgb(255, 132, 94);
+    font-size: 1.2em
+  }
+
   @font-face {
       font-family: "dbt-brand";
       font-weight: 300;
