--- a/_config/_includes/options/ondemand/learning_objectives.html
+++ b/_config/_includes/options/ondemand/learning_objectives.html
@@ -4,6 +4,7 @@
 
 <h1>Learning Objectives</h1>
 
+<div style="min-height: 450px;">
 <ul>
 {% for mod in module %}
   {% assign los = mod.learningObjectives %}
@@ -12,3 +13,4 @@
   {% endfor %}
 {% endfor %}
 </ul>
+</div>
