--- a/_config/_includes/options/ondemand/wistia_embed.html
+++ b/_config/_includes/options/ondemand/wistia_embed.html
@@ -18,18 +18,12 @@
 {% endfor %}
 
 {% if videoURL %}
-<div style="max-width: 850px;">
-  <div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;">
-    <div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;">
-      <div class="wistia_embed wistia_async_lortpnyki0 videoFoam=true" style="height:100%;position:relative;width:100%">
-        <div class="wistia_swatch" style="height:100%;left:0;opacity:0;overflow:hidden;position:absolute;top:0;transition:opacity 200ms;width:100%;">
-          <img src="{{ videoURL }}/swatch" style="filter:blur(5px);height:100%;object-fit:contain;width:100%;" alt="" aria-hidden="true" onload="this.parentNode.style.opacity=1;" />
-        </div>
-      </div>
-    </div>
+<div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;">
+  <div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;">
+    <iframe src="{{ videoURL }}?videoFoam=true" title="03 Review dbt Cloud Job Video" allow="autoplay; fullscreen" allowtransparency="true" frameborder="0" scrolling="no" class="wistia_embed" name="wistia_embed" allowfullscreen msallowfullscreen width="100%" height="100%">
+    </iframe>
   </div>
 </div>
-
 
 {% else %}
 
@@ -37,7 +31,5 @@
 
 {% endif %}
 
-<script src="{{ videoURL }}.jsonp" async></script>
-
-<script src="https://fast.wistia.com/assets/external/E-v1.js" async></script>
+<script src="https://fast.wistia.net/assets/external/E-v1.js" async></script>
 
