small layout changes

--- a/_config/_layouts/password.html
+++ b/_config/_layouts/password.html
@@ -114,7 +114,7 @@
               </div>
 
               <div class="grid-item">
-                <h6>development</h6>
+                <h6>beta</h6>
                 <input style="text-align: center;" id="password" type="password" placeholder="password" /> <br />
                 <button id=" loginbutton" type="button" style="margin-bottom: 0px;">enter</button>
                 <p id="wrongPassword" style="display: none">incorrect password</p>
