--- a/_config/_includes/options/ondemand/wistia_embed.html
+++ b/_config/_includes/options/ondemand/wistia_embed.html
@@ -18,12 +18,10 @@
 {% endfor %}
 
 {% if videoURL %}
-<div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;">
-  <div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;">
-    <iframe src="{{ videoURL }}?videoFoam=true" title="03 Review dbt Cloud Job Video" allow="autoplay; fullscreen" allowtransparency="true" frameborder="0" scrolling="no" class="wistia_embed" name="wistia_embed" allowfullscreen msallowfullscreen width="100%" height="100%">
+  <div class="wistia_responsive_wrapper" style="height:100%;left:0;top:0;width:90%;">
+    <iframe src="{{ videoURL }}?videoFoam=true" allow="autoplay; fullscreen" allowtransparency="true" frameborder="0" scrolling="no" class="wistia_embed" name="wistia_embed" allowfullscreen msallowfullscreen width="100%" height="100%">
     </iframe>
   </div>
-</div>
 
 {% else %}
 
