--- a/_config/_layouts/lesson.html
+++ b/_config/_layouts/lesson.html
@@ -46,9 +46,10 @@
             
             <div class="grid-item">
               {{ content }}
-
+             <hr style="margin:20px 5%">
+              {% include options/ondemand/prev_next_nav.html %}
             </div>
-          
+
           </div>
         </div>
       </div>
