--- a/_config/_layouts/page.html
+++ b/_config/_layouts/page.html
@@ -7,6 +7,7 @@
     {% include options/meta.html %}
     {% include options/scripts.html %}
     {% include options/styles.html %}
+    {% include options/styles-static.html %}
   </head>
 
   <body class="{{page.class}}">
