Initial build of Learn redesign

--- a/_config/_includes/content/nav.html
+++ b/_config/_includes/content/nav.html
@@ -16,20 +16,13 @@
 							{% assign baseurl = site.url %}
 						{% endif %}
 						<div class="navigation-link">
-							<a class="navigation-anchor" href="{{baseurl}}#about">About</a>
+							<a class="navigation-anchor" href="//courses.getdbt.com" target="_blank">Learn Now</a>
 						</div>
 						<div class="navigation-link">
-							<a class="navigation-anchor" href="{{baseurl}}#agenda">Agenda</a>
+							<a class="navigation-anchor" href="{{site.baseurl}}/public">Live Courses</a>
 						</div>
 						<div class="navigation-link">
-							<a class="navigation-anchor" href="{{baseurl}}#interest">Interest Form</a>
-						</div>
-						<div class="navigation-link">
-							<a class="navigation-anchor" href="{{baseurl}}#faq">FAQ</a>
-						</div>
-						<div class="navigation-link"> &nbsp; // &nbsp; </div>
-						<div class="navigation-link"> 
-							<a class="navigation-anchor" href="{{baseurl}}/lessons">Lessons</a>
+							<a class="navigation-anchor" href="//community.getdbt.com">Community</a>
 						</div>
 						
 					</div>
