--- a/ui/css/styles-static.scss
+++ b/ui/css/styles-static.scss
@@ -3,36 +3,134 @@
 /* styles for index and public Learn page */
 $darker-blue-2: #007b7b;
 $blue-2: #00bbbb;
+$red: #ff3f18;
 $red-2: #ff694b;
+$white-2: #ffffff;
 
 .homepage {
+    h1 {
+        font-size:71px;
+    }
     .flex-row {
-        width:95%;
         margin: 0 auto;
     }
-    .card {
-        background: transparent;
-        border: solid 2px $darker-blue-2;
-        border-radius: 4px;
-        box-shadow: 1px 2px 7px 0 rgba(6, 32, 40, 0.7);
-        margin:38px 10px;
-
-        .card-body {
-            padding:20px;
-
+    .top-promo {
+        .text-contain {
+            max-width:860px;
         }
-        .btn {
-            box-shadow: inset 0 0 0 1px $red-2;
-        }
-
-        &.highlight {
-            border: solid 2px $blue-2;
-            margin:10px;
-
-            .card-body {
-                padding: 45px 45px 72px;
-                margin:0;
+        .card {
+            background: transparent;
+            border: solid 2px $darker-blue-2;
+            border-radius: 4px;
+            box-shadow: 1px 2px 7px 0 rgba(6, 32, 40, 0.7);
+            margin:38px 10px;
+    
+            .card-header {
+                padding: 30px 34px 15px;
+                font-size:35px;
             }
+    
+            .card-body {
+                padding:15px 45px;
+    
+            }
+            .btn {
+                box-shadow: inset 0 0 0 1px $red-2;
+            }
+    
+            &.highlight {
+                border: solid 2px $blue-2;
+                margin:10px;
+                padding-bottom:30px;
+    
+                .card-body {
+                    padding-top:30px;
+                }
+    
+                hr {
+                    width: calc(100% - 90px);
+                    margin: 0 auto;
+                    border-top:4px solid $red-2;
+                }
+            }
+        }//.card
+    }//.homepage
+    .btn {
+        &:hover {
+            box-shadow: inset 0 0 0 1px $red;
+        }
+        &.btn-outline {
+            &:hover {
+                background-color:$red;
+            }
+        }
+        i {
+            margin-top:-1px;
+        }
+    }//.btn
+    .testimonial {
+        margin-top:0; //needs this so the navy blue wedge fits neatly under the section above
+        padding-top:100px;
+
+        .quote.top {
+            padding-top:100px;
+        }
+
+        h4 {
+            margin:60px 0;
+        }
+    }
+    .stats {
+        .card {
+            box-shadow:none;
+            padding:30px;
+            
+            .card-body {
+                background-size:contain;
+                background-repeat:no-repeat;
+                padding:60px 0;
+                margin: 0;
+                background-position:center;
+            }
+        }
+        .stat-number {
+            font-size:76px;
+            margin-bottom:20px;
+        }
+    }
+}
+.public {
+    .top-promo {
+        .pt-0 > *{
+            padding-top:0;
+        }
+        .btn-primary.btn {
+            
+            height: 73px;
+            padding: 1.5rem 1rem 1rem;
+            width: calc(85% + 2rem);
+
+            @media screen and (min-width: 1440px) { 
+                top: -42px;
+            }
+            i {
+                margin-top:5px;
+            }
+        }
+    }
+    .what-you-will-learn {
+        h3 {
+            font-size:35px;
+            letter-spacing: -0.29px;
+            font-weight: 600;
+        }
+        p {
+            font-size:21px;
+        }
+    }
+    .what-to-expect {
+        .btn {
+            margin-top:40px;
         }
     }
 }
