First batch of changes, per review

--- a/_config/_includes/content/nav.html
+++ b/_config/_includes/content/nav.html
@@ -19,10 +19,10 @@
 							<a class="navigation-anchor" href="//courses.getdbt.com" target="_blank">Learn Now</a>
 						</div>
 						<div class="navigation-link">
-							<a class="navigation-anchor" href="{{site.baseurl}}/public">Live Courses</a>
+							<a class="navigation-anchor" href="{{baseurl}}/public">Live Courses</a>
 						</div>
 						<div class="navigation-link">
-							<a class="navigation-anchor" href="//community.getdbt.com">Community</a>
+							<a class="navigation-anchor" href="//community.getdbt.com" target="_blank">Community</a>
 						</div>
 						
 					</div>
