--- a/ui/css/styles-static.scss
+++ b/ui/css/styles-static.scss
@@ -1,5 +1,11 @@
 ---
 ---
+/* nav overrides */
+.navigation-anchor {
+    font-weight:600;
+}
+/* end nav overrides */
+
 /* styles for index and public Learn page */
 $darker-blue-2: #007b7b;
 $blue-2: #00bbbb;
@@ -52,9 +58,9 @@ $white-2: #ffffff;
                     margin: 0 auto;
                     border-top:4px solid $red-2;
                 }
-            }
+            }//.highlight
         }//.card
-    }//.homepage
+    }//.top-promo
     .btn {
         &:hover {
             box-shadow: inset 0 0 0 1px $red;
@@ -65,7 +71,7 @@ $white-2: #ffffff;
             }
         }
         i {
-            margin-top:-1px;
+            margin-top:4px;
         }
     }//.btn
     .testimonial {
@@ -79,11 +85,16 @@ $white-2: #ffffff;
         h4 {
             margin:60px 0;
         }
+        .text-large {
+            font-size:1.5rem;
+            margin:1rem;
+        }
     }
     .stats {
         .card {
             box-shadow:none;
             padding:30px;
+            border-radius:10px;
             
             .card-body {
                 background-size:contain;
@@ -98,7 +109,7 @@ $white-2: #ffffff;
             margin-bottom:20px;
         }
     }
-}
+}//.homepage
 .public {
     .top-promo {
         .pt-0 > *{
@@ -134,3 +145,4 @@ $white-2: #ffffff;
         }
     }
 }
+/* end styles for index and public Learn page */
