--- a/ui/css/styles-static.scss
+++ b/ui/css/styles-static.scss
@@ -1,8 +1,8 @@
 ---
 ---
 /* nav overrides */
-.navigation-anchor {
-    font-weight:600;
+.navigation-content {
+    justify-content: center;
 }
 /* end nav overrides */
 
@@ -18,10 +18,18 @@ i[data-icon="right-open-mini"] {
 }
 .homepage {
     h1 {
-        font-size:71px;
+        @media screen and (min-width: 768px) {
+            font-size:4.5rem;
+        }
     }
     .flex-row {
         margin: 0 auto;
+    }
+    .hidden-xs {
+        &:before {
+            transform:none;
+        }
+        
     }
     .top-promo {
         .text-contain {
@@ -36,11 +44,16 @@ i[data-icon="right-open-mini"] {
     
             .card-header {
                 padding: 30px 34px 15px;
-                font-size:35px;
+                margin-bottom:0;
+
+                @media screen and (min-width: 768px) {
+                    font-size: 2.1875rem;
+                    margin-bottom:10px;
+                }
             }
     
             .card-body {
-                padding:15px 45px;
+                padding :15px 45px;
     
             }
             .btn {
@@ -111,6 +124,11 @@ i[data-icon="right-open-mini"] {
 }//.homepage
 .public {
     .top-promo {
+        h1 {
+            @media screen and (min-width: 768px) { 
+                font-size:3.8125rem;
+            }
+        }
         .pt-0 > *{
             padding-top:0;
         }
@@ -120,7 +138,7 @@ i[data-icon="right-open-mini"] {
             padding: 1.5rem 1rem 1rem;
             width: calc(85% + 2rem);
 
-            @media screen and (min-width: 1440px) { 
+            @media screen and (min-width: 768px) { 
                 top: -42px;
             }
 
@@ -128,17 +146,38 @@ i[data-icon="right-open-mini"] {
     }
     .what-you-will-learn {
         h3 {
-            font-size:35px;
-            letter-spacing: -0.29px;
             font-weight: 600;
+
+            @media screen and (min-width: 768px) { 
+                font-size:2.1875rem;
+                
+            }
         }
         p {
             font-size:21px;
         }
     }
     .what-to-expect {
+        h3 {
+            font-weight: 600;
+        }
+        h4 {
+            font-size:1.125rem;
+
+            @media screen and (min-width: 768px) { 
+                font-size: 1.25rem;
+            }
+        }
+        .text-contain {
+            max-width:600px;
+        }
         .btn {
             margin-top:40px;
+        }
+    }
+    .upcoming-events {
+        h3 {
+            margin-bottom:2.5rem;
         }
     }
 }
